--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "files": ["./src/server.ts"]
+  "files": ["./src/server.ts",
+          "./client/client.ts"]
 }
